--- a/APDEV Phase 1/main.html
+++ b/APDEV Phase 1/main.html
@@ -9,7 +9,11 @@
 
 <header>
   <h2>Lab Reservation</h2>
-  <button onclick="logout()">Logout</button>
+<!--Current User Showed here -->
+  <div style="display: flex; align-items: center; gap: 1rem;">
+    <h4 id="userInfo"></h4>
+    <button onclick="logout()">Logout</button>
+  </div>
 </header>
 
 <main>
