added lab view on main page. Feel free to edit how it looks or change the sample data

--- a/APDEV Phase 1/main.html
+++ b/APDEV Phase 1/main.html
@@ -19,6 +19,9 @@
 <main>
   <h3>Welcome to the Lab Reservation System</h3>
   <p>Select a lab to view available slots.</p>
+
+  <!-- Lab list will be dynamically generated here -->
+  <div id="labContainer"></div>
 </main>
 
 <script src="main.js"></script>
