--- a/APDEV Phase 1/main.html
+++ b/APDEV Phase 1/main.html
@@ -11,6 +11,7 @@
   <h2>Lab Reservation</h2>
   <div style="display: flex; align-items: center; gap: 1rem;">
     <h4 id="userInfo"></h4>
+    <button onclick="goToProfile()">My Profile</button>
     <button onclick="logout()">Logout</button>
   </div>
 </header>
@@ -23,6 +24,11 @@
   <h3 class="center">Slots</h3>
   <div class="center" id="slotSection"></div>
 
+
+  <div id="technicianSection" style="display: none;">
+    <h3 class="center">Reserve for Walk-in Student</h3>
+    <div class="center" id="walkInSection"></div>
+  </div>
 
   <h3 class="center">Reservations</h3>
   <button class="center" onclick="showMyReservations()">See My Reservations</button>
